docs: add README.md for Blogging Platform API with setup instructions and features overview